<resources>
    <string name="app_name">Closed Buster</string>
    <!-- メニュー -->
    <string name="menu_setting">Settings</string>
    <string name="setting_activity">ClosedBuster IMS Settings</string>
    <string name="nav_header_subtitle">ifLink Open Community</string>
    <!-- ホーム画面 -->
    <string name="recordtime">Updated %s</string>
    <string name="description_header">Monitor the CO2 concentration and prevent \"CLOSING\"</string>
    <string name="description_header1">Monitor the CO2 concentration</string>
    <string name="description_header2">and prevent \"CLOSING\"</string>
    <string name="description_footer">Monitoring by sensor</string>
    <string name="co2concentration">CO2</string>
    <string name="co2_unit">ppm</string>
    <string name="co2rank_low">Low</string>
    <string name="co2rank_middle">Middle</string>
    <string name="co2rank_high">High</string>
    <string name="co2rank_text_low">L: ～{0}ppm</string>
    <string name="co2rank_text_middle">M: {0}ppm～{1}ppm</string>
    <string name="co2rank_text_high">H: {0}ppm～</string>
    <string name="temperature_text">{0}°C</string>
    <string name="humidity_text">{0}%</string>
    <string name="barometer_text">{0}hPa</string>
    <string name="graph_min_text">{0}min ago</string>
    <!-- センサー管理画面 -->
    <string name="detect_sensors">Detect</string>
    <string name="register_sensors">Confirm operation</string>
    <string name="set_room_name">Tap to input sensor name</string>
    <string name="detected_sensors">Detected sensors</string>
    <string name="configured_sensors">Configured sensors</string>
    <string name="input_room_name">Input sensor name (BD Address {0})</string>
    <string name="input_room_name_add">Input sensor name (BD Address {0})\nPress OK and add it to the bottom list</string>
    <string name="title_confirm_register">Registration Confirmation</string>
    <string name="msg_confirm_register">Register sensors in this state. Are you sure?</string>
    <string name="msg_detected_sensors">{0} sensor[s] detected</string>
    <string name="msg_registered_sensors">The sensor has been registered. Please restart the app</string>
    <string name="msg_no_sensors_detected">no sensors detected</string>
    <string name="msg_no_sensors_registered">no sensors registered</string>
    <string name="msg_deleted_sensor">sensor deleted</string>
    <string name="msg_added_sensor">sensor added</string>
    <string name="description_sensorlist_operation">After selecting a sensor, you can move it by long press and swipe up/down, delete it by swipe right</string>
    <string name="description_sensorviewlimit">The top 1 in the smartphone layout and the top 2 in the tablet layout sensors will be displayed on the home screen</string>
    <!-- 設定画面 -->
    <string name="ble_settings">--- BLE Setting ---</string>
    <string name="scan_mode">Scan Mode</string>
    <string-array name="scan_mode_entries">
        <item>Low power : scans for 0.5 sec and pauses 4.5 sec</item>
        <item>Balanced : scans for 2 sec and pauses 3 seconds</item>
        <item>Low latency : scans continuously</item>
    </string-array>
    <string-array name="scan_mode_entryValues" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="ibi_member_id">IBI Member ID</string>
    <string name="ibi_module_id">IBI Module ID</string>
    <string name="ibi_member_id_dialog">IBI Member ID of the sensor (decimal number)</string>
    <string name="ibi_module_id_dialog">IBI Module ID of the sensor (decimal number)</string>
    <string name="judge_line_co2">--- Judgment criteria of CO2 concentration --- </string>
    <string name="co2_high_ppm">criteria of High [ppm]</string>
    <string name="co2_low_ppm">criteria of Low [ppm]</string>
    <string name="co2_high_judge_dialog">Judged by a value [ppm] above the specified</string>
    <string name="co2_low_judge_dialog">Judged by a value [ppm] less than the specified</string>
    <string name="behavior_setting">--- Behavior Setting ---</string>
    <string name="app_layout_type">Layout Mode</string>
    <string-array name="app_layout_type_entries">
        <item>Smartphone</item>
        <item>10 inch Tablet</item>
        <item>8 inch Tablet</item>
    </string-array>
    <string-array name="app_layout_type_entryValues" translatable="false">
        <item>smp</item>
        <item>tablet10</item>
        <item>tablet8</item>
    </string-array>
    <string name="screen_update_interval">Screen update Interval [sec]</string>
    <string name="screen_update_interval_dialog">Interval to update the screen drawing</string>
    <string name="runin_background">Run in background</string>
    <string name="draw_animation">Enable animation</string>
    <string name="graph_setting">--- Graph Setting ---</string>
    <string name="graph_scalemarks">Num of Scale Marks *TBI</string>
    <string name="graph_scalemarks_dialog">Number of Scale Marks to be drawn on Y-Axis</string>
    <string name="graph_count_minutes">Term of drawing [Minutes] *TBI</string>
    <string name="ims_setting">--- ifLink Setting ---</string>
    <string name="pref_log_level">Log output target</string>
    <string name="pref_log_level_key" translatable="false">loglevel</string>
    <string name="pref_log_level_summary">Select log items</string>
    <string-array name="pref_log_level_list_title">
        <item>ifLink I/F Device log</item>
        <item>ifLink I/F IMS log</item>
        <item>IMS Device log</item>
        <item>IMS Service log</item>
    </string-array>
    <string-array name="pref_log_level_list_values" translatable="false">
        <item>DEVICE-CONNECTOR</item>
        <item>IFLINK-CONNECTOR</item>
        <item>CUSTOM-DEV</item>
        <item>CUSTOM-IMS</item>
    </string-array>
    <string name="send_data_interval">Send Data Interval [sec]</string>
    <string name="send_data_interval_dialog">Interval for send data to ifLink</string>
    <string name="motion_off_minutes">Time to judge as no motion [Minutes]</string>
    <string name="motion_off_minutes_dialog">Judge when continuously received no motion for the specified time</string>
    <string name="keep_data_minutes">Time to judge as Sensor off [Minutes]</string>
    <string name="keep_data_minutes_dialog">Judge when no sensor data received for the specified time</string>
    <string name="unit_id">Terminal ID</string>
    <string name="unit_id_dialog">an ID for terminal identification</string>
    <string name="debug_setting">--- For Debugging ---</string>
    <string name="logging_ble_scan">Output scan log</string>
    <string name="logging_application">Output application log</string>
    <string name="draw_unknown_sensor">Draw unregistered sensor</string>
    <!-- メッセージ -->
    <string name="data_load_fail">Failed to load data.</string>
    <string name="data_save_fail">Failed to save data.</string>
    <string name="msg_auth_warn">The required permissions were not granted.Quit the application.</string>
    <!-- Fragment Label -->
    <string name="home_fragment_label">Home</string>
    <string name="setting_fragment_label">Setting</string>
    <string name="sensorsetting_fragment_label">Sensor Setting</string>
    <!-- SubMenu Title -->
    <string name="nav_menu_title_home">Home</string>
    <string name="nav_menu_title_sensor_settings">Sensor Settings</string>
    <string name="nav_menu_title_settings">App Settings</string>
</resources>
